test/success/success03.lsp
(r 'A 'B '(<))
(r 'B 'C '(< =))
(r 'A 'C '(>))
(r_exist 'A '(B C) '(d));  - hier wird der Existenzquantor eingesetzt
(r_exist 'A 'B '(di));  - hier wird der Existenzquantor eingesetzt
