test/fail/fail04.lsp
(r 'A 'B '(<))
(r 'B 'C '(<))
(r 'C 'A '(<))
(r_exists 'A 'A '(>))
